--- a/packages/blade/docs/tokens/Breakpoints.stories.mdx
+++ b/packages/blade/docs/tokens/Breakpoints.stories.mdx
@@ -8,14 +8,11 @@ import { getMediaQuery } from '../../src/utils';
   parameters={{
     docs: {
       container: ({ children, context }) => {
-        const getThemeTokens = () => {
-          return bladeTheme;
-        };
         return (
           <DocsContainer context={context}>
             <BladeProvider
               key={`${context.globals.themeTokenName}-${context.globals.colorScheme}`}
-              themeTokens={getThemeTokens()}
+              themeTokens={bladeTheme}
               colorScheme="light"
             >
               {children}
