--- a/packages/blade/docs/tokens/Motion.stories.mdx
+++ b/packages/blade/docs/tokens/Motion.stories.mdx
@@ -10,14 +10,11 @@ import MovingDiv from '../components/MovingDiv';
   parameters={{
     docs: {
       container: ({ children, context }) => {
-        const getThemeTokens = () => {
-          return bladeTheme;
-        };
         return (
           <DocsContainer context={context}>
             <BladeProvider
               key={`${context.globals.themeTokenName}-${context.globals.colorScheme}`}
-              themeTokens={getThemeTokens()}
+              themeTokens={bladeTheme}
               colorScheme={context.globals.colorScheme}
             >
               {children}
