--- a/packages/blade/docs/tokens/Typography.stories.mdx
+++ b/packages/blade/docs/tokens/Typography.stories.mdx
@@ -9,14 +9,11 @@ import FigmaEmbed from '../../src/utils/storybook/FigmaEmbed';
   parameters={{
     docs: {
       container: ({ children, context }) => {
-        const getThemeTokens = () => {
-          return bladeTheme;
-        };
         return (
           <DocsContainer context={context}>
             <BladeProvider
               key={`${context.globals.themeTokenName}-${context.globals.colorScheme}`}
-              themeTokens={getThemeTokens()}
+              themeTokens={bladeTheme}
               colorScheme={context.globals.colorScheme}
             >
               {children}
