feat: remove theme instances

--- a/packages/blade/docs/utils/useTheme.stories.mdx
+++ b/packages/blade/docs/utils/useTheme.stories.mdx
@@ -57,7 +57,7 @@ export default MyComponent;
 
 ```tsx
 type Theme = {
-  name: 'paymentTheme' | 'bankingTheme';
+  name: 'bladeTheme';
   border: Border;
   breakpoints: Breakpoints;
   colors: Colors;
