docs: add tokens/utils stories

--- a/packages/blade/docs/guides/FAQ.stories.mdx
+++ b/packages/blade/docs/guides/FAQ.stories.mdx
@@ -1,14 +1,5 @@
 import { Meta } from '@storybook/addon-docs';
-import {
-  Collapsible,
-  CollapsibleLink,
-  CollapsibleBody,
-  Accordion,
-  AccordionItem,
-  Text,
-  Code,
-  Link,
-} from '../../src/components';
+import { Accordion, AccordionItem, Text, Code, Link } from '../../src/components';
 
 <Meta title="Guides/FAQs" />
 
