--- a/packages/blade/docs/tokens/Motion.stories.mdx
+++ b/packages/blade/docs/tokens/Motion.stories.mdx
@@ -65,7 +65,7 @@ export const Motion = () => {
               <td>{`theme.motion.easing.standard.${key}`}</td>
               <td>{value}</td>
               <td style={{ width: '150px' }}>
-                <MovingDiv theme={theme} easing={theme.motion.easing.standard[key]}></MovingDiv>
+                <MovingDiv theme={theme} easing={theme.motion.easing.standard[key]} />
               </td>
             </tr>
           ))}
@@ -79,7 +79,7 @@ export const Motion = () => {
               <td>{`theme.motion.easing.entrance.${key}`}</td>
               <td>{value}</td>
               <td style={{ width: '150px' }}>
-                <MovingDiv theme={theme} easing={theme.motion.easing.entrance[key]}></MovingDiv>
+                <MovingDiv theme={theme} easing={theme.motion.easing.entrance[key]} />
               </td>
             </tr>
           ))}
@@ -93,7 +93,7 @@ export const Motion = () => {
               <td>{`theme.motion.easing.exit.${key}`}</td>
               <td>{value}</td>
               <td style={{ width: '150px' }}>
-                <MovingDiv theme={theme} easing={theme.motion.easing.exit[key]}></MovingDiv>
+                <MovingDiv theme={theme} easing={theme.motion.easing.exit[key]} />
               </td>
             </tr>
           ))}
@@ -109,7 +109,7 @@ export const MotionExample = () => {
     height: 50px;
     width: 50px;
     border-radius: 25px;
-    background-color: ${(props) => props.theme.colors.brand.primary[500]};
+    background-color: ${(props) => props.theme.colors.surface.background.primary.subtle};
     animation: ${(props) =>
       `resize ${makeMotionTime(props.theme.motion.duration.xgentle)} ${
         props.theme.motion.easing.standard.effective
@@ -126,7 +126,7 @@ export const MotionExample = () => {
       }
     }
   `;
-  return <ExampleDiv theme={theme} easing={theme.motion.easing.standard.effective}></ExampleDiv>;
+  return <ExampleDiv theme={theme} easing={theme.motion.easing.standard.effective} />;
 };
 
 <Motion />
@@ -147,7 +147,9 @@ const ExampleDiv = styled.div`
   height: 50px;
   width: 50px;
   border-radius: 25px;
-  background-color: ${(props) => props.theme.colors.brand.primary[500]};
+  background-color: ${(props) =>
+    console.log('from example div', props.theme) ||
+    props.theme.colors.surface.background.primary.subtle};
   animation: ${(props) =>
     `resize ${makeMotionTime(props.theme.motion.duration.xgentle)} ${
       props.theme.motion.easing.standard.effective
