--- a/packages/blade/docs/tokens/ThemeExplorer.stories.mdx
+++ b/packages/blade/docs/tokens/ThemeExplorer.stories.mdx
@@ -58,7 +58,7 @@ export const ThemeExplorer = () => {
           base0A: '#c18401',
           base0B: theme.colors.feedback.text.positive.intense,
           base0C: '#0184bc',
-          base0D: theme.colors.interactive.background.primary.default,
+          base0D: theme.colors.interactive.text.primary.default,
           base0E: '#a626a4',
           base0F: '#986801',
         }}
