--- a/packages/blade/docs/tokens/ThemeExplorer.stories.mdx
+++ b/packages/blade/docs/tokens/ThemeExplorer.stories.mdx
@@ -21,7 +21,7 @@ import { bladeTheme } from '../../src/tokens';
   }}
 />
 
-# 🪞 Blade's Theme
+# 🔭 Blade's Theme
 
 Explore Blade's theme tokens.
 
