chore: add rebranding info to intro page (#1913)

--- a/packages/blade/docs/guides/Intro.stories.mdx
+++ b/packages/blade/docs/guides/Intro.stories.mdx
@@ -30,6 +30,14 @@ import { Meta } from '@storybook/addon-docs';
 
 Blade is the Design System that powers [Razorpay](https://razorpay.com/)
 
+## 💫 Blade Rebranded
+- This is the new rebranded version of Blade which is under active development
+- We are currently working on migrating all the components from the old version of Blade to this new rebranded version.
+- Read more about the [rebranding & migration steps here](https://docs.google.com/document/d/1PLwUqx8LyfMeDW4u9CjwKHtSCpT1_sYUYtW_jwpLyDA/edit)
+- Check the current [availability status of rebranded components here](http://localhost:9009/?path=/docs/guides-component-status--docs)
+- Refer the older [documentation of Blade (before v11.0.0) here](https://61c19ee8d3d282003ac1d81c-wajigjwbnt.chromatic.com/)
+
+
 ## 🔗 Links
 
 - [Docs](https://blade.razorpay.com)
