--- a/packages/blade/docs/guides/Installation.stories.mdx
+++ b/packages/blade/docs/guides/Installation.stories.mdx
@@ -128,7 +128,7 @@ We use 2 fonts. [TASA Orbiter](https://tasatype.localremote.co/) (for our headin
 
 #### No Bundler Setups or No Code Tools
 
-If your project uses no-bundler setup or is a no code tool, you can install fonts with `unpkg` link
+If your project uses a no-bundler setup or is a no-code tool, you can install fonts with `unpkg` link
 
 ```html
 <link rel="stylesheet" href="https://unpkg.com/@razorpay/blade@<blade-version>/fonts.css" />
