--- a/packages/blade/docs/guides/Installation.stories.mdx
+++ b/packages/blade/docs/guides/Installation.stories.mdx
@@ -133,7 +133,7 @@ If your project uses a no-bundler setup or is a no-code tool, you can install fo
 ```html
 <link rel="stylesheet" href="https://unpkg.com/@razorpay/blade@<blade-version>/fonts.css" />
 <!-- 
-  Replace <blade-version> in the URL with version of blade you're using
+  Replace <blade-version> in the URL with the version of Blade you're using
   E.g. https://unpkg.com/@razorpay/blade@11.3.1/fonts.css 
 -->
 ```
