--- a/packages/blade/docs/guides/Usage.stories.mdx
+++ b/packages/blade/docs/guides/Usage.stories.mdx
@@ -90,7 +90,7 @@ Let's see how you can spot a token name from figma and write it in your code
 Whenever you get a UI mockup handed over by your designer
 
 1. Select the component whose color token you want to use in code up
-2. Click on the inspect panel on the left and click on the token name `surface.background.gray.moderate` to copy it and paste in your code.
+2. Click on the inspect panel on the left and click on the token name `surface.background.gray.moderate` to copy it and paste it into your code.
    > Remember, don't select the hardcoded `hsla` color value.
 
 ```jsx
