docs: multiple docs UI fixes and unpkg installation link in installation guide (#2041)
* docs: fixes for old tokens, replace ArgsTable with internal table

* fix: layout primitives fonts

* feat: add link rel installation for no bundler tools

* fix: remove commented code

* fix: Badge prop

* Update packages/blade/docs/guides/Installation.stories.mdx

Co-authored-by: Nitin Kumar <snitin315@gmail.com>

* Update packages/blade/docs/guides/Installation.stories.mdx

Co-authored-by: Nitin Kumar <snitin315@gmail.com>

* Update packages/blade/docs/guides/Usage.stories.mdx

Co-authored-by: Nitin Kumar <snitin315@gmail.com>

---------

Co-authored-by: Nitin Kumar <snitin315@gmail.com>

--- a/packages/blade/docs/guides/Installation.stories.mdx
+++ b/packages/blade/docs/guides/Installation.stories.mdx
@@ -126,6 +126,18 @@ We use 2 fonts. [TASA Orbiter](https://tasatype.localremote.co/) (for our headin
   `;
   ```
 
+#### No Bundler Setups or No Code Tools
+
+If your project uses a no-bundler setup or is a no-code tool, you can install fonts with `unpkg` link
+
+```html
+<link rel="stylesheet" href="https://unpkg.com/@razorpay/blade@<blade-version>/fonts.css" />
+<!-- 
+  Replace <blade-version> in the URL with the version of Blade you're using
+  E.g. https://unpkg.com/@razorpay/blade@11.3.1/fonts.css 
+-->
+```
+
 ### React Native Projects
 
 - Download fonts from <a href="https://github.com/razorpay/blade/tree/master/packages/blade/fonts/blade-fonts-react-native.zip">blade-fonts-react-native.zip</a> and unzip.
