feat: add github link

--- a/packages/blade/docs/guides/Intro.stories.mdx
+++ b/packages/blade/docs/guides/Intro.stories.mdx
@@ -56,6 +56,7 @@ Blade is the Cross-Platform, Open Source Design System that powers all of the [R
 
 - [Docs](https://blade.razorpay.com)
 - [Figma Library](https://www.figma.com/community/file/1341658976127676210)
+- [GitHub](https://github.com/razorpay/blade)
 - [Installation](https://blade.razorpay.com/?path=/docs/guides-installation--page)
 - [@razorpay/blade-old](https://github.com/razorpay/blade-old) (Deprecated, Private)
 
