--- a/packages/blade/docs/guides/RoutingLibraries.stories.mdx
+++ b/packages/blade/docs/guides/RoutingLibraries.stories.mdx
@@ -5,7 +5,7 @@ import { RecipeSandbox } from '~utils/storybook/Sandbox/SandpackEditor';
 
 ## Routing Libraries
 
-This guide will help you integrate blade navigation components like `Link`, `Button`, `Tabs`, `Breadcrumbs` etc with routing libraries like `react-router`, `@reach/router` etc.
+This guide will help you integrate blade navigation components like `Link`, `Button`, `Tabs`, `Breadcrumbs`, etc with routing libraries like `react-router`, `@reach/router`, etc.
 
 <div style={{ marginTop: 40 }} />
 
@@ -13,7 +13,7 @@ This guide will help you integrate blade navigation components like `Link`, `But
 
 ### Example with `react-router v5`
 
-In this example we enhanced our `Link` component to work with react-router v5 by using the `onClick` prop to handle the navigation.
+In this example, we enhanced our `Link` component to work with react-router v5 by using the `onClick` prop to handle the navigation.
 
 <div style={{ height: 500, marginTop: 30 }}>
   <RecipeSandbox
@@ -27,7 +27,7 @@ In this example we enhanced our `Link` component to work with react-router v5 by
 
 ### Example with `react-router v6`
 
-In v6 it's significantly easier to integrate with the help of `useHref`, `useLinkClickHandler` hooks provided by `react-router`.
+In v6 it's significantly easier to integrate with the help of `useHref` and `useLinkClickHandler` hooks provided by `react-router`.
 
 <div style={{ height: 500, marginTop: 30 }}>
   <RecipeSandbox
@@ -44,7 +44,7 @@ In v6 it's significantly easier to integrate with the help of `useHref`, `useLin
 
 ### Example with `react-router v6`
 
-In this example we enhanced our `TabItem` component to work with react-router v6 by using the `useHref` hook to get the href and `useLinkClickHandler` hook to handle the navigation.
+In this example, we enhanced our `TabItem` component to work with react-router v6 by using the `useHref` hook to get the href and `useLinkClickHandler` hook to handle the navigation.
 
 <div style={{ height: 500, marginTop: 30 }}>
   <RecipeSandbox
