docs: add blade coverage privacy policy

--- a/packages/blade/docs/utils/CoverageExtensionPrivacyPolicy.stories.mdx
+++ b/packages/blade/docs/utils/CoverageExtensionPrivacyPolicy.stories.mdx
@@ -175,4 +175,4 @@ You are advised to review this Privacy Policy periodically for any changes. Chan
 
 If you have any questions about this Privacy Policy, You can contact us:
 
-- By visiting this page on our website: https://github.com/razorpay/blade/issues/new
+- By creating a new issue in our GitHub repository: [https://github.com/razorpay/blade/issues/new](https://github.com/razorpay/blade/issues/new)
