chore: minor updates

--- a/packages/blade/docs/guides/Installation.stories.mdx
+++ b/packages/blade/docs/guides/Installation.stories.mdx
@@ -156,6 +156,7 @@ Before you install the package, make sure that you have performed the following 
         ```
 
       </StepItem>
+      <StepItem title="Next: Install Fonts" />
     </StepGroup>
 
   </TabPanel>
