--- a/packages/blade/docs/guides/Installation.stories.mdx
+++ b/packages/blade/docs/guides/Installation.stories.mdx
@@ -124,11 +124,8 @@ Before you install the package, make sure that you have performed the following 
             </ListItemText>
           </ListItem>
         </List>
-
       </StepItem>
-      <StepItem
-        title="2. Add ReactNative Dependencies [Optional for web projects]"
-      >
+      <StepItem title="2. Add ReactNative Dependencies [Optional for web projects]">
         ```shell
         yarn add @floating-ui/react-native@0.10.0 react-native-reanimated@3.4.1 react-native-tab-view@3.5.2 react-native-pager-view@6.2.1 react-native-svg@12.3.0 react-native-gesture-handler@2.9.0 @gorhom/bottom-sheet@4.4.6 @gorhom/portal@1.0.1
         ```
@@ -154,7 +151,6 @@ Before you install the package, make sure that you have performed the following 
         ```shell
         cd ios && pod install
         ```
-
       </StepItem>
       <StepItem title="Next: Install Fonts" />
     </StepGroup>
