--- a/packages/blade/docs/guides/CreateTheme.stories.mdx
+++ b/packages/blade/docs/guides/CreateTheme.stories.mdx
@@ -1,18 +1,18 @@
-{/* TODO: Rebranding - Rexpose Theming once we fix white-labeling */}
+{/_ TODO: Rebranding - Rexpose Theming once we fix white-labeling _/}
 import { Meta } from '@storybook/addon-docs';
 import {
-  Collapsible,
-  CollapsibleLink,
-  CollapsibleBody,
-  Accordion,
-  AccordionItem,
-  Text,
-  Code,
-  Link,
-  BladeProvider,
-  Button,
-  CreditCardIcon,
-  Heading,
+Collapsible,
+CollapsibleLink,
+CollapsibleBody,
+Accordion,
+AccordionItem,
+Text,
+Code,
+Link,
+BladeProvider,
+Button,
+CreditCardIcon,
+Heading,
 } from '../../src/components';
 import { createTheme } from '../../src/tokens';
 
@@ -43,7 +43,7 @@ To make this possible, Blade allows you to customize the theme of the components
 ```tsx
 import { createTheme } from '@razorpay/blade/tokens';
 
-const customThemeTokens = createTheme({
+const { theme: customThemeTokens } = createTheme({
   brandColor: '#83003D', // 'rgba(131, 0, 61)', 'hsl(332, 100%, 26%)' are also valid values
 });
 
@@ -70,11 +70,11 @@ Custom branded themes also contain support for light and dark color schemes. You
 export const ContrastDemo = () => {
   return (
     <div>
-      <BladeProvider themeTokens={createTheme({ brandColor: '#83003D' })} colorScheme="light">
+      <BladeProvider themeTokens={createTheme({ brandColor: '#83003D' }).theme} colorScheme="light">
         <Heading>Foreground on Button is Light based on the brand color</Heading>
         <Button icon={CreditCardIcon}>Pay Now</Button>
       </BladeProvider>
-      <BladeProvider themeTokens={createTheme({ brandColor: '#5EDD55' })} colorScheme="light">
+      <BladeProvider themeTokens={createTheme({ brandColor: '#5EDD55' }).theme} colorScheme="light">
         <Heading marginTop="spacing.6">
           Foreground on Button is Dark based on the brand color
         </Heading>
