chore: keep the prerequisite accordion open

--- a/packages/blade/docs/guides/Installation.stories.mdx
+++ b/packages/blade/docs/guides/Installation.stories.mdx
@@ -38,7 +38,7 @@ Before you install the package, make sure that you have performed the following 
   </ListItem>
 </List>
 
-<Accordion maxWidth="100%" variant="filled">
+<Accordion maxWidth="100%" variant="filled" defaultExpandedIndex={0}>
   <AccordionItem>
     <AccordionItemHeader><Text size="small">Razorpay Employees have to point @razorpay scope to GitHub Package Registry. Follow the steps below</Text></AccordionItemHeader>
     <AccordionItemBody>
