fix mobile view in intro page

--- a/packages/blade/docs/guides/Intro.stories.mdx
+++ b/packages/blade/docs/guides/Intro.stories.mdx
@@ -33,7 +33,7 @@ Blade is the Cross-Platform, Open Source Design System that powers all of the [R
 
 <div style={{ textAlign: 'left' }}>
   <iframe
-    width="560"
+    width="100%"
     height="315"
     src="https://www.youtube.com/embed/GH3HA6xOFEw?si=QLihQEyooEbtRPgg"
     title="YouTube video player"
