--- a/packages/blade/docs/guides/Intro.stories.mdx
+++ b/packages/blade/docs/guides/Intro.stories.mdx
@@ -33,14 +33,14 @@ Blade is the Cross-Platform, Open Source Design System that powers all of the [R
 
 <div style={{ textAlign: 'left' }}>
   <iframe
-    width="100%"
+    width="560"
     height="315"
     src="https://www.youtube.com/embed/GH3HA6xOFEw?si=QLihQEyooEbtRPgg"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen
-    style={{ borderRadius: '8px' }}
+    style={{ borderRadius: '8px', maxWidth: '100%' }}
   ></iframe>
 </div>
 
